Update dependencies, Grade 10 support Update dependencies of: org.spigotmc:spigot-api, org.apache.commons:commons-lang3 and de.hexaoxi:carbonchat-api
Update com.gradleup.shadow plugin

Gradle 10 support
Enable caching
Improve JAR building